--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -57,3 +57,10 @@ http://chromedevtools.googlecode.com/svn/wiki/EclipseDebuggerFeatures-pinpoint-d
 
 This will save your value in the global object, and you can access it at any time as {{{my_debug_save.manager1}}} (a dialog window also lets you add similar watch expressions.)
 Some time later you can see how this object has changed its data or compare it with what {{{getManager()}}} returns now: {{{my_debug_save.manager1 === getManager()}}}.
+
+==Temporarily Format Source==
+You can have your file from VirtualProject formatted. This will only remain effective within the current debug session.
+Open the context menu on a script under VirtualProject and choose the _V8 Debugging -> Temporarily Format Source_ action.
+The JSDT formatter will be used and JSDT integration feature should be installed for this.
+
+This feature is still experimental and may not always work properly. In particular, the formatter may fail on some scripts. Currently, there is a fall-back: a secondary, very simplistic formatter that may produce an output of extremely poor quality, which can no longer be a valid !JavaScript.
