--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -22,25 +22,14 @@ The Eclipse IDE can host several different debuggers. Such configurations often 
 
 ==Watches==
 TBD
+
 ===Load Full Value===
 Normally, the [EclipseDebugger Debugger] truncates string values longer than 80 characters; you can tell it by a typical cut-off in the end of string: {{{... (length: <actual length>)}}}. However the full value can be loaded on demand. In the _Variables_ or _Expressions_ view, select a truncated string value and choose _“Load Full Value”_ from its context menu. Note that the implementation is somewhat cautious: it will reload the string with a new length limit of 65536 chars. If that’s not enough for you, simply repeat the action once or twice.
 
 Note that manually entering expressions is sometimes more usable, than downloading a full value: {{{“value.substring(2978 - 100, 2978 + 100)”}}}
 
-==Step in/over/out==
-TBD
-==Stack context when suspended==
-TBD
-==Mouse on-hover identifier evaluation==
-TBD
-==Text selection evaluation==
-TBD
-==Script sources in workspace files and downloaded from server==
-TBD
-==Exception events reported into the Error Log==
-TBD
-==Script live editing (experimental)==
-TBD
+==Live Editing==
+When your scripts are already running, you can try to edit them and push changes into VM. Edit your script, save it, then choose {{{V8 Debugging->Push Source Changes to VM}}}. Additionally you can use {{{Preview and Push Source Changes to VM...}}} menu item that gives you some insight how the change is going to be applied. 
 
 ==!ToString==
 In some cases exploring variables can get much easier with their values represented as strings. A single glance at {{{“[1, 2, 3, 4, 5, 6, 7, 8]”}}} seems to be a much faster way to learn that the value is an array holding 8 numbers than expanding a tree node in the UI to see its children.
@@ -60,7 +49,15 @@ Some time later you can see how this object has changed its data or compare it w
 
 ==Temporarily Format Source==
 You can have your file from VirtualProject formatted. This will only remain effective within the current debug session.
-Open the context menu on a script under VirtualProject and choose the _V8 Debugging -> Temporarily Format Source_ action.
+Open the context menu on a script under VirtualProject and choose the {{{V8 Debugging->Temporarily Format Source}}} action.
 The JSDT formatter will be used and JSDT integration feature should be installed for this.
 
 This feature is still experimental and may not always work properly. In particular, the formatter may fail on some scripts. Currently, there is a fall-back: a secondary, very simplistic formatter that may produce an output of extremely poor quality, which can no longer be a valid !JavaScript.
+
+==TBD==
+  * Step in/over/out
+  * Stack context when suspended
+  * Mouse on-hover identifier evaluation
+  * Text selection evaluation
+  * Script sources in workspace files and downloaded from server
+  * Exception events reported into the Error Log
