--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -3,6 +3,8 @@
 
 <wiki:toc max_depth="2" />
 
+=Highlights=
+
 ==Debugging on Files That You Are Developing==
 By default debugger downloads all scripts and puts them under a correspoindg VirtualProject.
 However you typically not only want to debug a code, but in parallel to fix or develop it. You may have all your script source files on the local machine and even have them open in Eclipse under some project. In this case it is especially useful to have debugger use that (working) copy of your scripts instead of scripts in temporary project; so that you edit the same files that you debug.
@@ -76,7 +78,9 @@ The JSDT formatter will be used and JSDT integration feature should be installed
 
 This feature is still experimental and may not always work properly. In particular, the formatter may fail on some scripts. Currently, there is a fall-back: a secondary, very simplistic formatter that may produce an output of extremely poor quality, which can no longer be a valid !JavaScript.
 
-==TBD==
+=Boring Features=
+TBD:
+
   * Step in/over/out
   * Stack context when suspended
   * Mouse on-hover identifier evaluation
