--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -78,7 +78,7 @@ The JSDT formatter will be used and JSDT integration feature should be installed
 This feature is still experimental and may not always work properly. In particular, the formatter may fail on some scripts. Currently, there is a fall-back: a secondary, very simplistic formatter that may produce an output of extremely poor quality, which can no longer be a valid !JavaScript.
 
 <wiki:comment>
-=Boring Features=
+-Boring Features-
 TBD:
 
   * Breakpoints
