--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -3,6 +3,16 @@
 
 <wiki:toc max_depth="2" />
 
+=Basic Capabilities=
+  * Breakpoints
+  * Step in/over/out
+  * Stack context when suspended
+  * Mouse on-hover identifier evaluation
+  * Text selection evaluation
+  * Script sources in workspace files and downloaded from server
+  * Exception events reported into the Error Log
+
+
 =Highlights=
 
 ==Debugging on Files That You Are Developing/Source Mapping==
@@ -74,17 +84,3 @@ Open the context menu on a script under VirtualProject and choose the {{{V8 Debu
 The JSDT formatter will be used and JSDT integration feature should be installed for this.
 
 This feature is still experimental and may not always work properly. In particular, the formatter may fail on some scripts. Currently, there is a fall-back: a secondary, very simplistic formatter that may produce an output of extremely poor quality, which can no longer be a valid !JavaScript.
-
-<wiki:comment>
--Boring Features-
-TBD:
-
-  * Breakpoints
-  * Step in/over/out
-  * Stack context when suspended
-  * Mouse on-hover identifier evaluation
-  * Text selection evaluation
-  * Script sources in workspace files and downloaded from server
-  * Exception events reported into the Error Log
-
-</wiki:comment>
