--- a/wiki/EclipseDebugger.wiki
+++ b/wiki/EclipseDebugger.wiki
@@ -4,25 +4,11 @@
 
 An essential part of the Google Chrome Developer Tools is the remote !JavaScript debugger for Eclipse, based on the ChromeDevToolsSdk. The debugger employs the Eclipse Platform debug and launch frameworks to provide most of the functionality.
 
-The latest debugger version can be installed from the following update site:
-
-{{{
-http://chromedevtools.googlecode.com/svn/update/dev/
-}}}
+See also HowToInstall page.
 
 = Features =
 
-The !JavaScript debugger exposes the following capabilities:
-  * Breakpoints
-    * breakpoint can be set before script is loaded or before debugger is connected
-  * Watches
-  * Step in/over/out
-  * Stack context when suspended
-  * Mouse on-hover identifier evaluation
-  * Text selection evaluation
-  * Script sources in workspace files and downloaded from server
-  * Exception events reported into the Error Log
-  * Script live editing (experimental)
+Main article: EclipseDebuggerFeatures.
 
 = Known issues =
   * Duplicate scripts can be loaded from V8 for the same resource.
