--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -51,10 +51,7 @@ Both types of exceptions are controlled from the _"Break on !JavaScript Exceptio
 ===Selecting Breakpoint Type===
 The Eclipse IDE can host several different debuggers. Such configurations often cause ambiguity when setting a breakpoint: which debugger should own the new breakpoint? Eclipse provides a UI for this case and it is now supported by !ChromeDevTools. You may explicitly choose a type of breakpoint you are about to set in the menu {{{Run->Breakpoint Types}}} (choose "Chrome/V8 breakpoints" in a submenu.)
 
-==Watches==
-TBD
-
-===Load Full Value===
+==Load Full Value==
 Normally, the [EclipseDebugger Debugger] truncates string values longer than 80 characters; you can tell it by a typical cut-off in the end of string: {{{... (length: <actual length>)}}}. However the full value can be loaded on demand. In the _Variables_ or _Expressions_ view, select a truncated string value and choose _“Load Full Value”_ from its context menu. Note that the implementation is somewhat cautious: it will reload the string with a new length limit of 65536 chars. If that’s not enough for you, simply repeat the action once or twice.
 
 Note that manually entering expressions is sometimes more usable, than downloading a full value: {{{“value.substring(2978 - 100, 2978 + 100)”}}}
