--- a/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -41,5 +41,7 @@ MockUpResourceWriter_SCRIPTS_OVERLAPPED='{' scripts overlapped. the following sc
 ResourceManager_UnnamedScriptName=(program)
 StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
+TargetInitializeState_INITIALIZING=<initializing>
+TargetInitializeState_TERMINATED=<intialization terminated>
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
 Variable_NullTypeForAVariable=null type for a variable
