--- a/wiki/LaunchElement.wiki
+++ b/wiki/LaunchElement.wiki
@@ -6,7 +6,7 @@ It is visible in 'Debug' view in 'Debug' perspective.
 
 http://chromedevtools.googlecode.com/svn/wiki/rel022-launch.png
 
-On the picture above the launch object is labeled "chrome 9222 `[`Chromium !JavaScript]". First part "chrome 9222" is a name of the corresponding launch configuration (see menu {{{Run | Debug Configurations...}}}).
+On the picture above the launch the top-level object labeled "chrome 9222 `[`Chromium !JavaScript]". First part "chrome 9222" is a name of the corresponding launch configuration (see menu {{{Run | Debug Configurations...}}}).
 
 A launch has nested elements (one is _target_, the other one is _thread_). In !ChromeDevTools each launch corresponds to a VirtualProject.
 
