Edited wiki page EclipseDebuggerFeatures through web user interface.

--- a/wiki/EclipseDebuggerFeatures.wiki
+++ b/wiki/EclipseDebuggerFeatures.wiki
@@ -46,7 +46,7 @@ A !JavaScript VM may be instructed to stop on each exception thrown. All excepti
   * _caught_ exceptions, which are to be caught by a {{{catch}}} clause somewhere in the script, and
   * _uncaught_ exceptions, which terminate script execution altogether and return the control to the calling application.
 
-Both types of exceptions are controlled from the _"Break on !JavaScript Exception"_ item in the launch context menu. (a _"launch"_, a.k.a. a _"debug session"_, is each of the top-level elements in the _Debug_ view).
+Both types of exceptions are controlled from the _"Break on !JavaScript Exception"_ item in the [LaunchElement launch] context menu.
 
 ===Selecting Breakpoint Type===
 The Eclipse IDE can host several different debuggers. Such configurations often cause ambiguity when setting a breakpoint: which debugger should own the new breakpoint? Eclipse provides a UI for this case and it is now supported by !ChromeDevTools. You may explicitly choose a type of breakpoint you are about to set in the menu {{{Run->Breakpoint Types}}} (choose "Chrome/V8 breakpoints" in a submenu.)
