Edited wiki page VirtualProject through web user interface.

--- a/wiki/VirtualProject.wiki
+++ b/wiki/VirtualProject.wiki
@@ -12,6 +12,6 @@ For languages like C++ or Java, all source files reside in a developer's working
 
 A virtual project is useful because it contains all up-to-date sources, so you don't have to care about getting them from elsewhere. It also contains sources that are generated on the fly, and is irreplaceable in this aspect.
 
-Unfortunately, a virtual project is not very useful for a !JavaScript developer who may want to _edit_ files, not only debug them. (Actually, scripts from virtual projects _are_ editable, which is used for the _live editing_ feature, but all changes are lost once the VM stops). In a more common setting, a developer will link a debug session to the workspace source files -- a feature first introduced and described in [Release_0_1_6 release 0.1.6].
+Unfortunately, a virtual project is not very useful for a !JavaScript developer who may want to _edit_ files, not only debug them. (Actually, scripts from virtual projects _are_ editable, which is used for the _live editing_ feature, but all changes are lost once the VM stops). In a more common setting, a developer will link a debug session to the workspace source files -- see [FeatureDebugOnRealFiles feature description].
 
 Note that a virtual project exists for any debug session, regardless of whether it has the workspace source files configured or not.
