--- a/wiki/EclipseDebugger.wiki
+++ b/wiki/EclipseDebugger.wiki
@@ -4,7 +4,7 @@
 
 An essential part of the Google Chrome Developer Tools is the remote !JavaScript debugger for Eclipse, based on the ChromeDevToolsSdk. The debugger employs the Eclipse Platform debug and launch frameworks to provide most of the functionality.
 
-See also HowToInstall page.
+See also HowToInstall and DebuggerTutorial.
 
 = Features =
 
