Edited wiki page WipBackendDevelopment through web user interface.

--- a/wiki/WipBackendDevelopment.wiki
+++ b/wiki/WipBackendDevelopment.wiki
@@ -4,7 +4,9 @@
 Google Chrome/Chromium uses ChromeDevToolsProtocol for remote debugging, which is a slightly extended [http://code.google.com/p/v8/wiki/DebuggerProtocol V8 debugger protocol]. SDK supports both of them. However Chrome is in process of switching to a new protocol called "!WebInspector Protocol" (WIP) that is likely to be supported by the whole [http://webkit.org WebKit]-based browser family.
 
 == !WebInspector Protocol ==
-TBD
+See blog posts:
+  * [http://blog.chromium.org/2011/05/remote-debugging-with-chrome-developer.html Remote debugging with Chrome Developer Tools], The Chromium Blog, May 9th, 2011,
+  * [http://www.webkit.org/blog/1620/webkit-remote-debugging/ WebKit Remote Debugging], Surfin' Safari, May 9th, 2011.
 
 == Support development process ==
 SDK is going to support new protocol together with the old two.
