--- a/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
+++ b/trunk/plugins/org.chromium.debug.core/src/org/chromium/debug/core/model/messages.properties
@@ -43,5 +43,6 @@ StackFrame_NameFormat={0} [{1}:{2}]
 StackFrame_UnknownScriptName=<unknown>
 TargetInitializeState_INITIALIZING=<initializing>
 TargetInitializeState_TERMINATED=<intialization terminated>
+Variable_CANNOT_BUILD_EXPRESSION=Cannot build watch expression for this value
 Variable_NotScalarOrObjectFormat=Not scalar or object: {0}
 Variable_NullTypeForAVariable=null type for a variable
