Change source look-up design
Review URL: http://codereview.chromium.org/7089017

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -7,5 +7,6 @@ JsLineBreakpointPage_LineNumberLabel=Line Number:
 JsLineBreakpointPage_ResourceLabel=Resource:
 JsLineBreakpointPage_UnknownLineNumber=<unknown>
 ScriptFilePage_CURRENTLY_LINKED_TO_LABEL=Workspace file is currently linked to scripts in debug launches:
+ScriptFilePage_MULTIPLE_INACCURATE_MATCH=(multiple inaccurate match)
 ScriptFilePage_NAME_IN_VPROJECT=Name under virtual project: 
 ScriptFilePage_SCRIPT_NAME=Script name: 
