--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/source/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/source/messages.properties
@@ -14,3 +14,4 @@ SourceNameMapperContainerDialog_PREFIX_GROUP=Prefix of source name
 SourceNameMapperContainerDialog_PREFIX_NORMALLY_ENDS=Prefix normally ends with '/'
 SourceNameMapperContainerDialog_SAMPLE_FILE_NAME=utils/timer.js
 SourceNameMapperContainerDialog_TYPE_LABEL=Type:
+SourceNameMapperContainerDialogLogic_TARGET_CONTAINER_NOT_SUPPORTED0=Target container not (fully) supported
