UI 'accurateness' control
Review URL: http://codereview.chromium.org/7240029

--- a/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
+++ b/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/propertypages/messages.properties
@@ -1,3 +1,5 @@
+AccuratenessControl_LESS_BUTTON=< Less
+AccuratenessControl_MORE_BUTTON=More >
 JavascriptLineBreakpointPage_BreakpointConditionErrorMessage=Breakpoint condition must not be null
 JavascriptLineBreakpointPage_EnableCondition=Enable Condition
 JavascriptLineBreakpointPage_Enabled=Enabled
