--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -5,6 +5,7 @@ ChromiumRemoteTab_ShowDebuggerNetworkCommunication=Show debugger network communi
 ChromiumRemoteTab_HostLabel=Host:
 ChromiumRemoteTab_PortLabel=Port:
 ChromiumRemoteTab_RemoteTabName=Remote
+ChromiumRemoteTab_INACCURATE_CONTAINER_WARNING=Warning: JavaScript Source Mapper doesn't co-work with Inaccurate Source Lookup
 ChromiumRemoteTab_InvalidPortNumberError=Invalid port number
 # note that this string is a part of the hidden filename, so translate with care
 LaunchType_LogConsoleLaunchName=chromedevtools-logger
