Edited wiki page Release_0_2_2 through web user interface.

--- a/wiki/Release_0_2_2.wiki
+++ b/wiki/Release_0_2_2.wiki
@@ -42,4 +42,4 @@ The Eclipse IDE can host several different debuggers. Such configurations often 
 || *Java:* || J2SE-1.6 or newer. ||
 
 Optional:
-|| *JSDT version:*<br>(feature _!JavaScript Development Tools_) || 1.2.0 or newer. ||
+|| *JSDT version:*<br>(feature _!JavaScript Development Tools_) || 1.2.0 or newer<br>(corresponds to Eclipse 3.6).||
